Updated MathUtility